--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 autogen-agentchat==0.6.4
 autogen-core==0.6.4
 autogen-ext==0.6.4
+autogen-ext[openai,azure]
 asyncio==3.4.3
+
+pydantic==2.11.7
+python-dotenv==1.1.1
+black==25.1.0
